PGPLOT module Changes list
--------------------------

v2.21, released Jan 1st, 2011
-----------------------------

* Semi-dirty hack in Makefile.PL to force i386/x86_64 single arch only builds on Mac OS X. - Karl 
  (for libpgplot compatibility which seems to be generally built this way, e.g. in SciKarl)
  Note added some clever code to try and match the arch of the pgplot binaries.
* PGPLOT::HANDLE warning fix (Chris Phillips Jun 2010)
* Make linking order -lcpgplot -lpgplot for cygwin (Chris Marshall Dec 2010)

CHANGES v2.20, released, May 16th 2007
--------------------------------------

* Doug Burke's Makefile.PL patch - re-org and better OS X support.
* Added /usr/local/pgplot to the include search path
* Added -png to the default list of libs as just about every pgplot build needs this
* Now works cleanly on Intel and PPC OS X with gcc, g77 and gfortran
* Added INSTALL, INSTALL-MacOSX and INSTALL-Win32 instruction files and updated README

CHANGES v2.19, released Jan 3rd, 2006
-------------------------------------

* Diab's patch to allow specifying alternate libary paths on the command line (see HELP)
* Added pgpt1 and pgerr1 back for compatibility with latest C PGPLOT
* Win32 patches from Rob - Sisyphus <kalinabears@iinet.net.au> (2005/1/25)

CHANGES v2.18, released Dec 28th 2000
-------------------------------------

* Added file HINTS.osf, updated HELP
* Fixed memory leak in coerce1D (thanks to Pete Ratzlaff)
* Added Doug Hunt's internals patch to export more pgplot C routines
* Improvements to HELP file

CHANGES v2.17, released May 8th, 2000
-------------------------------------

* Charles Lane's patch to do with new perl versions (PL_XXX stuff)
* Changed my email address.

CHANGES v2.16, released Mar 10th, 2000
--------------------------------------

* Added function struct to allow access to expose certain PGPLOT
  routines to the outside (currently cpgmove, cpgdraw)

CHANGES 2.15 released Oct 26th 1999
-----------------------------------
